# ledger-app-ergo

./: .gitignore  CHANGELOG.md  Makefile  Makefile.env  README.md  ledger_app.toml  test-cmds.py  test-cmds.sh  test_cmds_txs.py
.doxygen/: Doxyfile
.github/workflows/: ci-workflow.yml  codeql-workflow.yml  lint-workflow.yml
doc/: APDU.md  INDEX.md  INS-01-APP-VERSION.md  INS-02-APP-NAME.md  INS-10-EXT-PUB-KEY.md  INS-11-DERIVE-ADDR.md  INS-20-ATTEST-BOX.md  INS-21-SIGN-TRANSACTION.md  README.md
src/: apdu_dispatcher.c  apdu_dispatcher.h  app_main.c  constants.h  context.c  context.h  crypto.h  globals.h  io.c  io.h  main.c  menu.c  sw.h  types.h  ui.c
src/apdu/: dispatcher.c  parser.c
src/commands/: app_name.c  app_name.h  app_version.c  app_version.h
src/commands/attestinput/: ainpt_context.h  ainpt_handler.c  ainpt_handler.h  ainpt_response.c  ainpt_response.h  ainpt_sw.h  ainpt_ui.c  ainpt_ui.h
src/commands/deriveaddress/: da_context.h  da_handler.c  da_handler.h  da_response.c  da_response.h  da_sw.h  da_ui.c  da_ui.h
src/commands/extpubkey/: epk_context.h  epk_handler.c  epk_handler.h  epk_response.c  epk_response.h  epk_sw.h  epk_ui.c  epk_ui.h
src/commands/signtx/: stx_amounts.c  stx_amounts.h  stx_context.h  stx_handler.c  stx_handler.h  stx_output.c  stx_output.h  stx_response.c  stx_response.h  stx_sw.h  stx_types.h  stx_ui.c  stx_ui.h
src/commands/signtx/operations/: stx_op_p2pk.c  stx_op_p2pk.h
src/common/: base58.c  bip32.c  bip32.h  bip32_ext.c  bip32_ext.h  buffer.c  buffer.h  buffer_ext.c  buffer_ext.h  format.c  format.h  gve.c  gve.h  int_ops.h  macros.h  macros_ext.h  rwbuffer.c  rwbuffer.h  varint.c  varint.h  write.c  zigzag.h
src/ergo/: address.c  address.h  ergo_tree.c  ergo_tree.h  network_id.h  schnorr.c  schnorr.h  tx_ser_box.c  tx_ser_box.h  tx_ser_full.c  tx_ser_full.h  tx_ser_input.c  tx_ser_input.h  tx_ser_simple.c  tx_ser_simple.h  tx_ser_table.c  tx_ser_table.h
src/helpers/: blake2b.c  blake2b.h  cmd_macros.h  crypto.c  crypto.h  hmac.c  hmac.h  input_frame.c  input_frame.h  io.c  io.h  response.h  session_id.h  stack_protect.c  stack_protect.h  sw_result.h
src/ui/: ui_application_id.c  ui_application_id.h  ui_approve_reject.c  ui_approve_reject.h  ui_bip32_path.c  ui_bip32_path.h  ui_dynamic_flow.c  ui_dynamic_flow.h  ui_main.c  ui_main.h  ui_menu.c  ui_menu.h
tests/: README.md  address-tests.js  basic-commands-tests.js  basic-tests.js  package.json  public-key-tests.js  seed.txt  transaction-tests.js
tests/helpers/: automation.js  common.js  data.js  device.js  flow.js  hooks.js  makefile.js  screen.js  transaction.js
unit-tests/: CMakeLists.txt  test_address.c  test_base58.c  test_bip32.c  test_buffer.c  test_ergo_tree.c  test_format.c  test_full_tx.c  test_gve.c  test_input_frame.c  test_int_ops.c  test_read.c  test_safeint.c  test_tx_ser_box.c  test_tx_ser_input.c  test_tx_ser_table.c  test_varint.c  test_write.c  test_zigzag.c
unit-tests/utils/: base58.c  base58.h  bip32.c  bip32.h  blake2b-ref.c  blake2b-ref.h  cx.c  cx.h  ledger_assert.h  macro_helpers.h  macros.h  os.h  read.c  write.c  write.h
